apps/demo-4/demo-4/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-4
  namespace: demo-4
  labels:
    app: demo-4
spec:
  selector:
    app: demo-4
  ports:
  - name: http
    protocol: TCP
    port: 5000
    targetPort: 5000
